@@ -24,6 +24,8 @@ autopkgtest (3.19.4) UNRELEASED; urgency=medium
   * adt-virt-lxc: Add --name option. This allows CI systems to use a more
     expressive name than the autogenerated adt-virt-lxc-XXXXXX, to make it
     easier to map a container to a running test.
+  * Add CPU information to testinfo.json: "nproc" (#cpus), "cpu_model", and
+    "cpu_flags". (LP: #1552129)
 
  -- Martin Pitt <mpitt@debian.org>  Tue, 23 Feb 2016 18:21:51 +0100
 
